--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>Matthew Tully Moser's CSCE 190 Site I Guess</h1>
     <h3>This coding is cool and all</h3>
     <section class="assignment">
-        <a href="Problem Statement.pdf"><img src="problem.png"></a>
+        <a href="Files/Problem Statement.pdf"><img src="Images/problem.png"></a>
         <section class="ass-details">
-            <a href="Problem Statement.pdf"><h2>problem Statement: adult health care</h2></a>
+            <a href="Files/Problem Statement.pdf"><h2>problem Statement: adult health care</h2></a>
         </section>
     </section>
 </body>
