--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 <body>
     <h1>Matthew Tully Moser's CSCE 190 Site I Guess</h1>
     <h3>This coding is cool and all</h3>
-    <section class="assignment">
+    <section class="assignment 0">
         <a href="Files/Problem Statement.pdf"><img src="Images/problem.png"></a>
-        <section class="ass-details">
+        <section class="ass-details 0">
             <a href="Files/Problem Statement.pdf"><h2>problem Statement: adult health care</h2></a>
+        </section>
+    </section>
+        <section class="assignment 1">
+        <a href="Affinity Diagram- Bold and Brandy.pdf"><img src="Images/Affinity Diagram- Bold and Brandy.png"></a>
+        <section class="ass-details 1">
+            <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><h2>Affinity Diagram</h2></a>
         </section>
     </section>
 </body>
