--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </section>
     </section>
         <section class="assignment 1">
-        <a href="Affinity Diagram- Bold and Brandy.pdf"><img src="Images/Affinity Diagram- Bold and Brandy.png"></a>
+        <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><img src="Images/Affinity Diagram- Bold and Brandy.png"></a>
         <section class="ass-details 1">
             <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><h2>Affinity Diagram</h2></a>
         </section>
