--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
             <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><h2>Affinity Diagram</h2></a>
         </section>
     </section>
+        <section class="assignment 2">
+        <a href="Files/Personas.pdf"><img src="Images/Persona.png"></a>
+        <section class="ass-details 2">
+            <a href="Files/Personas.pdf"><h2>Personas</h2></a>
+        </section>
+    </section>
 </body>
 </html>
