--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
             <a href="Files/Personas.pdf"><h2>Personas</h2></a>
         </section>
     </section>
+    <section class="assignment 3">
+        <a href="Files/combinepdf.pdf"><img src="Images/combinepdf.png"></a>
+        <section class="ass-details 3">
+            <a href="Files/combinepdf.pdf"><h2>Teams Story Boards</h2></a>
+        </section>
+    </section>
 </body>
 </html>
