--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
             <a href="Files/combinepdf.pdf"><h2>Teams Story Boards</h2></a>
         </section>
     </section>
+     <section class="assignment 4">
+        <a href="Files/combinepdf2.pdf"><img src="Images/combinepdf2.png"></a>
+        <section class="ass-details 4">
+            <a href="Files/combinepdf2.pdf"><h2>Teams Story Boards</h2></a>
+        </section>
+    </section>
 </body>
 </html>
