--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
             <a href="Files/combinepdf2.pdf"><h2>Teams Story Boards</h2></a>
         </section>
     </section>
+        <section class="ass-details 5">
+            <a href="https://youtu.be/u5CySnlP68s"><h2>Paper Prototype</h2></a>
+        </section>
 </body>
 </html>
