--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><h2>Affinity Diagram</h2></a>
         </section>
     </section>
-        <section class="assignment>
+        <section class="assignment">
         <a href="Files/Personas.pdf"><img src="Images/Persona.png"></a>
         <section class="ass-details">
             <a href="Files/Personas.pdf"><h2>Personas</h2></a>
