--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="Files/combinepdf2.pdf"><h2>Teams Story Boards</h2></a>
         </section>
     </section>
-        <section class="ass-details">
+        <section class="assignment">
             <a href="https://youtu.be/u5CySnlP68s"><h2>Paper Prototype</h2></a>
         </section>
 </body>
