--- a/index.html
+++ b/index.html
@@ -8,38 +8,40 @@
 <body>
     <h1>Matthew Tully Moser's CSCE 190 Site I Guess</h1>
     <h3>This coding is cool and all</h3>
-    <section class="assignment">
-        <a href="Files/Problem Statement.pdf"><img src="Images/problem.png"></a>
-        <section class="ass-details 0">
-            <a href="Files/Problem Statement.pdf"><h2>problem Statement: adult health care</h2></a>
-        </section>
-    </section>
+    <div class="assignment">
         <section class="assignment">
-        <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><img src="Images/Affinity Diagram- Bold and Brandy.png"></a>
-        <section class="ass-details 1">
-            <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><h2>Affinity Diagram</h2></a>
+            <a href="Files/Problem Statement.pdf"><img src="Images/problem.png"></a>
+            <section class="ass-details 0">
+                <a href="Files/Problem Statement.pdf"><h2>problem Statement: adult health care</h2></a>
+            </section>
         </section>
-    </section>
+            <section class="assignment">
+            <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><img src="Images/Affinity Diagram- Bold and Brandy.png"></a>
+            <section class="ass-details 1">
+                <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><h2>Affinity Diagram</h2></a>
+            </section>
+        </section>
+            <section class="assignment">
+            <a href="Files/Personas.pdf"><img src="Images/Persona.png"></a>
+            <section class="ass-details">
+                <a href="Files/Personas.pdf"><h2>Personas</h2></a>
+            </section>
+        </section>
         <section class="assignment">
-        <a href="Files/Personas.pdf"><img src="Images/Persona.png"></a>
-        <section class="ass-details">
-            <a href="Files/Personas.pdf"><h2>Personas</h2></a>
+            <a href="Files/combinepdf.pdf"><img src="Images/combinepdf.png"></a>
+            <section class="ass-details">
+                <a href="Files/combinepdf.pdf"><h2>Teams Story Boards</h2></a>
+            </section>
         </section>
-    </section>
-    <section class="assignment">
-        <a href="Files/combinepdf.pdf"><img src="Images/combinepdf.png"></a>
-        <section class="ass-details">
-            <a href="Files/combinepdf.pdf"><h2>Teams Story Boards</h2></a>
-        </section>
-    </section>
-     <section class="assignment">
-        <a href="Files/combinepdf2.pdf"><img src="Images/combinepdf2.png"></a>
-        <section class="ass-details">
-            <a href="Files/combinepdf2.pdf"><h2>Teams Story Boards</h2></a>
-        </section>
-    </section>
         <section class="assignment">
-            <a href="https://youtu.be/u5CySnlP68s"><h2>Paper Prototype</h2></a>
+            <a href="Files/combinepdf2.pdf"><img src="Images/combinepdf2.png"></a>
+            <section class="ass-details">
+                <a href="Files/combinepdf2.pdf"><h2>Teams Story Boards</h2></a>
+            </section>
         </section>
+            <section class="assignment">
+                <a href="https://youtu.be/u5CySnlP68s"><h2>Paper Prototype</h2></a>
+            </section>
+            </div>
 </body>
 </html>
