--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="assignment">
         <section class="assignment">
             <a href="Files/Problem Statement.pdf"><img src="Images/problem.png"></a>
-            <section class="ass-details 0">
+            <section class="ass-details">
                 <a href="Files/Problem Statement.pdf"><h2>problem Statement: adult health care</h2></a>
             </section>
         </section>
             <section class="assignment">
             <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><img src="Images/Affinity Diagram- Bold and Brandy.png"></a>
-            <section class="ass-details 1">
+            <section class="ass-details">
                 <a href="Files/Affinity Diagram- Bold and Brandy.pdf"><h2>Affinity Diagram</h2></a>
             </section>
         </section>
