--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Matthew Tully Moser's CSCE 190 Site I Guess</h1>
     <h3>This coding is cool and all</h3>
-    <div class="assignment">
+    <div class="assignments">
         <section class="assignment">
             <a href="Files/Problem Statement.pdf"><img src="Images/problem.png"></a>
             <section class="ass-details">
