--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <section class="assignment">
                 <a href="https://youtu.be/u5CySnlP68s"><h2>Paper Prototype</h2></a>
             </section>
+            <section calss="assignment">
+                <a href="Files/high-fi-prototype/index.html">
+                <h2>high-fi-prototype: Adult Heathcare app</h2></a>
+                <a href="Files/high-fi-prototype/index.html">
+                <img src="images/high-fi.png"></a>
+            </section>
             </div>
 </body>
 </html>
