--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                 <a href="Files/high-fi-prototype/index.html">
                 <h2>high-fi-prototype: Adult Heathcare app</h2></a>
                 <a href="Files/high-fi-prototype/index.html">
-                <img src="images/high-fi.png"></a>
+                <img src=Images/high-fi.png"></a>
+                <p> 
+                    The Adult health Care App final prototype.
+                </p>
             </section>
             </div>
 </body>
