--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="Files/high-fi-prototype/index.html">
                 <h2>high-fi-prototype: Adult Heathcare app</h2></a>
                 <a href="Files/high-fi-prototype/index.html">
-                <img src=Images/high-fi.png"></a>
+                <img src=Images/highfi.png"></a>
                 <p> 
                     The Adult health Care App final prototype.
                 </p>
