--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section class="assignment">
                 <a href="https://youtu.be/u5CySnlP68s"><h2>Paper Prototype</h2></a>
             </section>
-            <section calss="assignment">
+            <section class="assignment">
                 <a href="Files/high-fi-prototype/index.html">
                 <h2>high-fi-prototype: Adult Heathcare app</h2></a>
                 <a href="Files/high-fi-prototype/index.html">
